--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "botbuilder": "~4.17.0",
         "dotenv": "^8.2.0",
+        "reddit-image-fetcher": "^2.0.11",
         "replace": "^1.2.0",
         "restify": "~8.6.0"
     },
