add config to env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MicrosoftAppType=
-MicrosoftAppId=
-MicrosoftAppPassword=
-MicrosoftAppTenantId=
+MicrosoftAppType=MultiTenant
+MicrosoftAppId="3022313b-772b-4cf3-b09f-726b93d0bc92"
+MicrosoftAppPassword="dzo8Q~4uf9X2gkg2qT3CeLeVQp7mhxxR3ThY0bvC"
+MicrosoftAppTenantId="fc1ae2f5-0bae-4ef1-b717-7c09a3375e88"
